--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Al Muktadir Munam - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
-
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,6 +28,74 @@
         <p>Research Interests: Epidemiology, Public Health, Data Science, Machine Learning</p>
     </section>
     <section id="education">
+    <h2>Educational Qualifications</h2>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Degree</th>
+                    <th>Concentration</th>
+                    <th>Institute</th>
+                    <th>Result</th>
+                    <th>Marks</th>
+                    <th>Year</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>PhD</td>
+                    <td>Epidemiology and Applied Health Research</td>
+                    <td>Dalhousie University</td>
+                    <td>Ongoing</td>
+                    <td>N/A</td>
+                    <td>2027</td>
+                </tr>
+                <tr>
+                    <td>MPH</td>
+                    <td>Public Health</td>
+                    <td>Varendra University</td>
+                    <td>3.95/4.00</td>
+                    <td>79.53%</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td>B.Sc.</td>
+                    <td>Computer Science and Engineering</td>
+                    <td>Varendra University</td>
+                    <td>4.00/4.00</td>
+                    <td>91.78%</td>
+                    <td>2022</td>
+                </tr>
+                <tr>
+                    <td>H.S.C</td>
+                    <td>Science</td>
+                    <td>Rajshahi College</td>
+                    <td>5.00/5.00</td>
+                    <td>92.15%</td>
+                    <td>2016</td>
+                </tr>
+                <tr>
+                    <td>S.S.C</td>
+                    <td>Science</td>
+                    <td>Govt. Laboratory High School</td>
+                    <td>5.00/5.00</td>
+                    <td>N/A</td>
+                    <td>2014</td>
+                </tr>
+                <tr>
+                    <td>J.S.C</td>
+                    <td>General</td>
+                    <td>Govt. Laboratory High School</td>
+                    <td>5.00/5.00</td>
+                    <td>N/A</td>
+                    <td>2011</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+
+    <section id="education2">
         <h2>Educational Qualifications</h2>
         <table>
             <tr><th>Degree</th><th>Concentration</th><th>Institute</th><th>Result</th><th>Marks</th><th>Year</th></tr>
