--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al Muktadir Munam - Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Al Muktadir Munam</h1>
-        <p>Public Mental Health Researcher</p>
+        <p>Photographer & Public Mental Health Researcher</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
         <p>Address: 612-5885 Spring Garden Road, Halifax NS B3H 1Y3</p>
         <p>
@@ -28,113 +28,176 @@
         <p>Research Interests: Epidemiology, Public Health, Data Science, Machine Learning</p>
     </section>
     <section id="education">
-    <h2>Educational Qualifications</h2>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Degree</th>
-                    <th>Concentration</th>
-                    <th>Institute</th>
-                    <th>Result</th>
-                    <th>Marks</th>
-                    <th>Year</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>PhD</td>
-                    <td>Epidemiology and Applied Health Research</td>
-                    <td>Dalhousie University</td>
-                    <td>Ongoing</td>
-                    <td>N/A</td>
-                    <td>2027</td>
-                </tr>
-                <tr>
-                    <td>MPH</td>
-                    <td>Public Health</td>
-                    <td>Varendra University</td>
-                    <td>3.95/4.00</td>
-                    <td>79.53%</td>
-                    <td>2023</td>
-                </tr>
-                <tr>
-                    <td>B.Sc.</td>
-                    <td>Computer Science and Engineering</td>
-                    <td>Varendra University</td>
-                    <td>4.00/4.00</td>
-                    <td>91.78%</td>
-                    <td>2022</td>
-                </tr>
-                <tr>
-                    <td>H.S.C</td>
-                    <td>Science</td>
-                    <td>Rajshahi College</td>
-                    <td>5.00/5.00</td>
-                    <td>92.15%</td>
-                    <td>2016</td>
-                </tr>
-                <tr>
-                    <td>S.S.C</td>
-                    <td>Science</td>
-                    <td>Govt. Laboratory High School</td>
-                    <td>5.00/5.00</td>
-                    <td>N/A</td>
-                    <td>2014</td>
-                </tr>
-                <tr>
-                    <td>J.S.C</td>
-                    <td>General</td>
-                    <td>Govt. Laboratory High School</td>
-                    <td>5.00/5.00</td>
-                    <td>N/A</td>
-                    <td>2011</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</section>
-
-    <section id="education2">
         <h2>Educational Qualifications</h2>
-        <table>
-            <tr><th>Degree</th><th>Concentration</th><th>Institute</th><th>Result</th><th>Marks</th><th>Year</th></tr>
-            <tr><td>PhD</td><td>Epidemiology and Applied Health Research</td><td>Dalhousie University</td><td>Ongoing</td><td>N/A</td><td>2027</td></tr>
-            <tr><td>MPH</td><td>Public Health</td><td>Varendra University</td><td>3.95/4.00</td><td>79.53%</td><td>2023</td></tr>
-            <tr><td>B.Sc.</td><td>Computer Science and Engineering</td><td>Varendra University</td><td>4.00/4.00</td><td>91.78%</td><td>2022</td></tr>
-            <tr><td>H.S.C</td><td>Science</td><td>Rajshahi College</td><td>5.00/5.00</td><td>92.15%</td><td>2016</td></tr>
-            <tr><td>S.S.C</td><td>Science</td><td>Govt. Laboratory High School</td><td>5.00/5.00</td><td>N/A</td><td>2014</td></tr>
-            <tr><td>J.S.C</td><td>General</td><td>Govt. Laboratory High School</td><td>5.00/5.00</td><td>N/A</td><td>2011</td></tr>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Degree</th>
+                        <th>Concentration</th>
+                        <th>Institute</th>
+                        <th>Result</th>
+                        <th>Marks</th>
+                        <th>Year</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>PhD</td>
+                        <td>Epidemiology and Applied Health Research</td>
+                        <td>Dalhousie University</td>
+                        <td>Ongoing</td>
+                        <td>N/A</td>
+                        <td>2027</td>
+                    </tr>
+                    <tr>
+                        <td>MPH</td>
+                        <td>Public Health</td>
+                        <td>Varendra University</td>
+                        <td>3.95/4.00</td>
+                        <td>79.53%</td>
+                        <td>2023</td>
+                    </tr>
+                    <tr>
+                        <td>B.Sc.</td>
+                        <td>Computer Science and Engineering</td>
+                        <td>Varendra University</td>
+                        <td>4.00/4.00</td>
+                        <td>91.78%</td>
+                        <td>2022</td>
+                    </tr>
+                    <tr>
+                        <td>H.S.C</td>
+                        <td>Science</td>
+                        <td>Rajshahi College</td>
+                        <td>5.00/5.00</td>
+                        <td>92.15%</td>
+                        <td>2016</td>
+                    </tr>
+                    <tr>
+                        <td>S.S.C</td>
+                        <td>Science</td>
+                        <td>Govt. Laboratory High School</td>
+                        <td>5.00/5.00</td>
+                        <td>N/A</td>
+                        <td>2014</td>
+                    </tr>
+                    <tr>
+                        <td>J.S.C</td>
+                        <td>General</td>
+                        <td>Govt. Laboratory High School</td>
+                        <td>5.00/5.00</td>
+                        <td>N/A</td>
+                        <td>2011</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
     <section id="experience">
         <h2>Professional Experience</h2>
-        <table>
-            <tr><th>Designation</th><th>Institution</th><th>Period</th></tr>
-            <tr><td>Lecturer, Dept. of CSE</td><td>Varendra University</td><td>Feb. 07, 2022 – Present</td></tr>
-            <tr><td>Facilitator (VUCC)</td><td>Rupantor & PEACE</td><td>Oct. 15, 2021 – Dec. 13, 2021</td></tr>
-            <tr><td>Instructor (Quant and Analytical Skills)</td><td>Mentors’ Education</td><td>May 22, 2018 – Feb. 6, 2022</td></tr>
-            <tr><td>Instructor (ISSB)</td><td>Unity Coaching Center</td><td>May 14, 2018 – Sep. 6, 2021</td></tr>
-            <tr><td>Officer Cadet</td><td>Bangladesh Navy (Batch 17/B)</td><td>Jul. 1, 2017 – Jan. 9, 2018</td></tr>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Designation</th>
+                        <th>Institution</th>
+                        <th>Period</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lecturer, Dept. of CSE</td>
+                        <td>Varendra University</td>
+                        <td>Feb. 07, 2022 – Present</td>
+                    </tr>
+                    <tr>
+                        <td>Facilitator (VUCC)</td>
+                        <td>Rupantor & PEACE</td>
+                        <td>Oct. 15, 2021 – Dec. 13, 2021</td>
+                    </tr>
+                    <tr>
+                        <td>Instructor (Quant and Analytical Skills)</td>
+                        <td>Mentors’ Education</td>
+                        <td>May 22, 2018 – Feb. 6, 2022</td>
+                    </tr>
+                    <tr>
+                        <td>Instructor (ISSB)</td>
+                        <td>Unity Coaching Center</td>
+                        <td>May 14, 2018 – Sep. 6, 2021</td>
+                    </tr>
+                    <tr>
+                        <td>Officer Cadet</td>
+                        <td>Bangladesh Navy (Batch 17/B)</td>
+                        <td>Jul. 1, 2017 – Jan. 9, 2018</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
     <section id="language">
         <h2>Language Proficiency</h2>
-        <ul>
-            <li>Bengali (Native Tongue)</li>
-            <li>English (IELTS Band Score – 7.5: Listening – 9, Reading – 7.5, Writing – 6.5, Speaking – 6.5)</li>
-        </ul>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Language</th>
+                        <th>Proficiency</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Bengali</td>
+                        <td>Native Tongue</td>
+                    </tr>
+                    <tr>
+                        <td>English</td>
+                        <td>IELTS Band Score – 7.5 (Listening – 9, Reading – 7.5, Writing – 6.5, Speaking – 6.5)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
     <section id="trainings">
         <h2>Trainings</h2>
-        <table>
-            <tr><th>Training</th><th>Organization</th><th>Period</th></tr>
-            <tr><td>CPR/AED Training</td><td>Heart4Heart & EHS</td><td>Mar. 15, 2024</td></tr>
-            <tr><td>Dalhousie OpenThink Initiative 2024</td><td>Faculty of Graduate Studies</td><td>Jan. 02, 2024 - present</td></tr>
-            <tr><td>Training of Facilitators for Youth Leadership Training</td><td>Rupantor & PEACE</td><td>Sep. 23, 2021 – Sep. 26, 2021</td></tr>
-            <tr><td>Youth Social Leadership Training</td><td>University of Chicago and NY</td><td>Jan. 31, 2020 – Jul. 26, 2020</td></tr>
-            <tr><td>67th Joint Service Training (78 BMA Long Course)</td><td>Bangladesh Military Academy</td><td>Jul. 5, 2017 – Sep. 21, 2017</td></tr>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Training</th>
+                        <th>Organization</th>
+                        <th>Period</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>CPR/AED Training</td>
+                        <td>Heart4Heart & EHS</td>
+                        <td>Mar. 15, 2024</td>
+                    </tr>
+                    <tr>
+                        <td>Dalhousie OpenThink Initiative 2024</td>
+                        <td>Faculty of Graduate Studies</td>
+                        <td>Jan. 02, 2024 - present</td>
+                    </tr>
+                    <tr>
+                        <td>Training of Facilitators for Youth Leadership Training</td>
+                        <td>Rupantor & PEACE</td>
+                        <td>Sep. 23, 2021 – Sep. 26, 2021</td>
+                    </tr>
+                    <tr>
+                        <td>Youth Social Leadership Training</td>
+                        <td>University of Chicago and NY</td>
+                        <td>Jan. 31, 2020 – Jul. 26, 2020</td>
+                    </tr>
+                    <tr>
+                        <td>67th Joint Service Training (78 BMA Long Course)</td>
+                        <td>Bangladesh Military Academy</td>
+                        <td>Jul. 5, 2017 – Sep. 21, 2017</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
     <section id="publications">
         <h2>Journal Publications</h2>
