--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <h1>Al Muktadir Munam</h1>
-        <p>Photographer & Public Mental Health Researcher</p>
+        <p>Public Mental Health Researcher</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
-        <p>Address: 612-5885 Spring Garden Road, Halifax NS B3H 1Y3</p>
+        <p>Address: 5885 Spring Garden Road, Halifax NS B3H 1Y3</p>
         <p>
             <a href="https://www.linkedin.com/in/al-muktadir-munam">LinkedIn</a> | 
             <a href="https://scholar.google.com/citations?user=xxxx">Google Scholar</a> | 
