--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <a href="https://university-portfolio-link">University Portfolio</a>
         </p>
     </header>
+    <div class="container">
     <section id="career-summary">
         <h2>Career Summary</h2>
         <p>With a strong foundation in Computer Science, Munam is an accomplished individual who has seamlessly blended his expertise in technology with his passion for health by holding a master’s degree in public health. He is currently pursuing a PhD degree in Epidemiology and Applied Health Research at Dalhousie University in Nova Scotia, Canada. Munam's research interests lie at the intersection of epidemiology, data science, and machine learning, where he strives to leverage advanced computational techniques to unravel complex health challenges. His dedication and expertise have been recognized through the publication of his work in esteemed journals such as IEEE, Elsevier, and Springer Nature.</p>
@@ -261,6 +262,7 @@
             <li>People Analytics, University of Pennsylvania (Coursera)</li>
         </ol>
     </section>
+    </div>
     <footer>
         <p>&copy; 2024 Al Muktadir Munam. All rights reserved.</p>
     </footer>
