--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             <a href="https://university-portfolio-link">University Portfolio</a>
         </p>
     </header>
+    <nav>
+        <ul class="navbar">
+            <li><a href="#career-summary">Career Summary</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#language">Language</a></li>
+            <li><a href="#trainings">Trainings</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#awards">Awards</a></li>
+            <li><a href="#certifications">Certifications</a></li>
+        </ul>
+    </nav>
     <div class="container">
     <section id="career-summary">
         <h2>Career Summary</h2>
