--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Al Muktadir Munam</h1>
         <p>Public Mental Health Researcher</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
-        <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
+        <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canadakkk</p>
         <p>
             <a href="https://www.linkedin.com/in/al-muktadir-munam">LinkedIn</a> | 
             <a href="https://scholar.google.com/citations?user=xxxx">Google Scholar</a> | 
