--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Al Muktadir Munam</h1>
+        <h1>Al Muktadir Munam :)</h1>
         <p>Public Mental Health Researcher</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
         <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
