--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
 </head>
 <body>
     <header>
-        <h1>Al Muktadir Munam :)</h1>
+        <h1>Al Muktadir Munam</h1>
         <p>Public Mental Health Researcher</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
         <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
         <p>
-            <a href="https://www.linkedin.com/in/al-muktadir-munam" target="_blank">LinkedIn</a> | 
-            <a href="https://scholar.google.com/citations?user=K7U1hsEAAAAJ&hl=en" target="_blank">Google Scholar</a> | 
-            <a href="https://www.researchgate.net/profile/Al-Muktadir-Munam" target="_blank">Research Gate</a> | 
-            <a href="https://vu.edu.bd/academics/departments/computer-science-and-engineering/faculty-members/02437/al-muktadir-munam" target="_blank">University Portfolio</a>
-        </p>
-
-    
+            <a href="https://www.linkedin.com/in/al-muktadir-munam" class="header-link" target="_blank">LinkedIn</a> | 
+            <a href="https://scholar.google.com/citations?user=K7U1hsEAAAAJ&hl=en" class="header-link" target="_blank">Google Scholar</a> | 
+            <a href="https://www.researchgate.net/profile/Al-Muktadir-Munam" class="header-link" target="_blank">Research Gate</a> | 
+            <a href="https://vu.edu.bd/academics/departments/computer-science-and-engineering/faculty-members/02437/al-muktadir-munam" class="header-link" target="_blank">University Portfolio</a>
+        </p>    
     <nav>
         <ul class="navbar">
             <li><a href="#career-summary">Career Summary</a></li>
