--- a/index.html
+++ b/index.html
@@ -20,15 +20,10 @@
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
         <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
         <p>
-            <a href="https://www.linkedin.com/in/al-muktadir-munam" class="header-link" target="_blank">LinkedIn</a> | 
-            <a href="https://scholar.google.com/citations?user=K7U1hsEAAAAJ&hl=en" class="header-link" target="_blank">Google Scholar</a> | 
-            <a href="https://www.researchgate.net/profile/Al-Muktadir-Munam" class="header-link" target="_blank">Research Gate</a> | 
-            <a href="https://vu.edu.bd/academics/departments/computer-science-and-engineering/faculty-members/02437/al-muktadir-munam" class="header-link" target="_blank">University Portfolio</a>
-            
-            <a href="https://www.linkedin.com/in/al-muktadir-munam" class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Warning link</a> |
-            <a href="https://scholar.google.com/citations?user=K7U1hsEAAAAJ&hl=en" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Danger link</a> |
-            <a href="https://www.researchgate.net/profile/Al-Muktadir-Munam" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Light link</a> |
-            <a href="https://vu.edu.bd/academics/departments/computer-science-and-engineering/faculty-members/02437/al-muktadir-munam" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Info link</a>
+            <a href="https://www.linkedin.com/in/al-muktadir-munam" class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">LinkedIn</a> |
+            <a href="https://scholar.google.com/citations?user=K7U1hsEAAAAJ&hl=en" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Google Scholar</a> |
+            <a href="https://www.researchgate.net/profile/Al-Muktadir-Munam" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Research Gate</a> |
+            <a href="https://vu.edu.bd/academics/departments/computer-science-and-engineering/faculty-members/02437/al-muktadir-munam" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Faculty Website</a>
         </p> 
        
     <nav>
