--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>Al Muktadir Munam</h1>
-        <p>Public Mental Health Researcher</p>
+        <p>PhD Student, Epidemiology and Applied Health Research, Dalhousie University</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
         <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
         <p>
@@ -44,9 +44,7 @@
         <h2>Career Summary</h2>
         <p>With a strong foundation in Computer Science, Munam is an accomplished individual who has seamlessly blended his expertise in technology with his passion for health by holding a master’s degree in public health. He is currently pursuing a PhD degree in Epidemiology and Applied Health Research at Dalhousie University in Nova Scotia, Canada. Munam's research interests lie at the intersection of epidemiology, data science, and machine learning, where he strives to leverage advanced computational techniques to unravel complex health challenges. His dedication and expertise have been recognized through the publication of his work in esteemed journals such as IEEE, Elsevier, and Springer Nature.</p>
         <p>With over five years of teaching experience across various institutions, he has sharpened his instructional skills and fostered a dynamic learning environment for his students. Munam's diverse skill set, which includes military experience as an Officer Cadet in the Bangladesh Navy, lends him a unique perspective and enriches his ability to approach challenges from multiple angles. In addition to these, Munam is a passionate educator serving as a lecturer in the Department of Computer Science and Engineering at Varendra University since 2022. His management skills, leadership qualities, analytical thinking, and proficiency in MS Office further enhance his capabilities as an educator and researcher. Munam's ability to navigate ambiguity and adapt seamlessly to new environments and situations is a testament to his flexibility and resilience.</p>
-        <p>Research Interests: Epidemiology, Public Health, Data Science, Machine Learning</p>
-        <p><a href="#" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Primary link</a></p>
-
+        <p> <b>Research Interests: </b>Epidemiology, Public Health, Mental Health, Data Science, Machine Learning</p>
     </section>
     <section id="education">
         <h2>Educational Qualifications</h2>
