--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <header>
         <h1>Al Muktadir Munam</h1>
-        <h4>PhD Student, Epidemiology and Applied Health Research, Dalhousie University</h4>
-        <h3>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</h3>>
-        <h3>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</h3>
+        <h6>PhD Student, Epidemiology and Applied Health Research, Dalhousie University</h6>
+        <h5>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</h5>
+        <h5>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</h5>
         <p>
             <a href="https://www.linkedin.com/in/al-muktadir-munam" class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">LinkedIn</a> |
             <a href="https://scholar.google.com/citations?user=K7U1hsEAAAAJ&hl=en" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Google Scholar</a> |
