--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
 <body>
     <header>
         <h1>Al Muktadir Munam</h1>
-        <h6>PhD Student, Epidemiology and Applied Health Research, Dalhousie University</h6>
-        <h5>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</h5>
-        <h5>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</h5>
+        <p>PhD Student, Epidemiology and Applied Health Research, Dalhousie University</p>
+        <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
+        <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
         <p>
             <a href="https://www.linkedin.com/in/al-muktadir-munam" class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">LinkedIn</a> |
             <a href="https://scholar.google.com/citations?user=K7U1hsEAAAAJ&hl=en" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Google Scholar</a> |
             <a href="https://www.researchgate.net/profile/Al-Muktadir-Munam" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Research Gate</a> |
             <a href="https://vu.edu.bd/academics/departments/computer-science-and-engineering/faculty-members/02437/al-muktadir-munam" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Faculty Website</a>
         </p> 
-       
     <nav>
         <ul class="navbar">
             <li><a href="#career-summary">Career Summary</a></li>
