--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>Al Muktadir Munam</h1>
+        <h1>Al Muktadir Munam n</h1>
         <p>PhD Student, Epidemiology and Applied Health Research, Dalhousie University</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
         <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
