--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Carter One' rel='stylesheet'>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -15,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>Al Muktadir Munam</h1>
+        <h1 class="intro-title mb-4" style="font-family: Carter One" > AL MUKTADIR MUNAM </h1>
         <p>PhD Student, Epidemiology and Applied Health Research, Dalhousie University</p>
         <p>Contact: muktadir.munam@(dal.ca | gmail.com) | +1 902 478 1743</p>
         <p>Address: 5885 Spring Garden Road, Halifax, Nova Scotia, Canada</p>
